added some HTML structure and a little bit of content

--- a/index.html
+++ b/index.html
@@ -1,19 +1,56 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
 
-  <title>My Resume</title>
+    <title>My Resume</title>
 
-  <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/index.css" />
 
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
-</head>
+    <!--[if lt IE 9]>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+    <![endif]-->
+  </head>
 
-<body>
-  <h1>My Resume</h1>
-</body>
+  <body>
+    <header>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#about">About</a>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </header>
+
+    <section id="about">
+      <div>
+        <img />
+      </div>
+      <div>
+        <h1>Patrick Stevenson</h1>
+        <h2>Web Developer</h2>
+        <p>
+          I am a web developer based out of Southern California. Feel free to
+          contact me with questions regarding availability for future projects.
+        </p>
+      </div>
+    </section>
+    <!-- End ABOUT -->
+
+    <section id="portfolio"></section>
+    <!-- End PORTFOLIO-->
+
+    <section id="contact"></section>
+    <!-- End CONTACT-->
+
+    <footer>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#about">About</a>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </footer>
+  </body>
 </html>
