added profile picture

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <section id="about">
       <div>
-        <img />
+        <img src="./images/profile.jpeg" />
       </div>
       <div>
         <h1>Patrick Stevenson</h1>
