added images and text to portfolio section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,49 @@
     </section>
     <!-- End ABOUT -->
 
-    <section id="portfolio"></section>
+    <section id="portfolio">
+      <div>
+        <h2>Portfolio</h2>
+      </div>
+      <div>
+        <div class="project">
+          <img
+            src="./images/responsive.jpg"
+            class="projectImage"
+            alt="Webpage with responsive phone view"
+          />
+          <h3>Responsive</h3>
+          <p></p>
+        </div>
+        <div class="project">
+          <img
+            src="./images/sprint.jpg"
+            class="projectImage"
+            alt="Webpage with CSS styling"
+          />
+          <h3>Sprint</h3>
+          <p></p>
+        </div>
+        <div class="project">
+          <img
+            src="./images/UI3.jpg"
+            class="projectImage"
+            alt="Webpage with CSS styling"
+          />
+          <h3>User Interface III</h3>
+          <p>User Interface I project with CSS styling and flexbox.</p>
+        </div>
+        <div class="project">
+          <img
+            src="./images/UI1.jpg"
+            class="projectImage"
+            alt="Barebones HTML page"
+          />
+          <h3>User Interface I</h3>
+          <p>Barebones HTML project</p>
+        </div>
+      </div>
+    </section>
     <!-- End PORTFOLIO-->
 
     <section id="contact"></section>
