set up flex, styled some sections

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div>
         <img src="./images/profile.jpeg" />
       </div>
-      <div>
+      <div class="aboutInfo">
         <h1>Patrick Stevenson</h1>
         <h2>Web Developer</h2>
         <p>
@@ -42,7 +42,7 @@
       <div>
         <h2>Portfolio</h2>
       </div>
-      <div>
+      <div class="projects">
         <div class="project">
           <img
             src="./images/responsive.jpg"
@@ -83,7 +83,21 @@
     </section>
     <!-- End PORTFOLIO-->
 
-    <section id="contact"></section>
+    <section id="contact">
+      <div>
+        <h2>Contact</h2>
+      </div>
+      <div class="contactInfo">
+        <div class="form">
+          <form></form>
+        </div>
+        <div class="links">
+          <a href="pat.jon.stevenson@gmail.com">Email</a>
+          <a href="github.com/patjonstevenson">GitHub</a>
+          <a href="linkedin.com/in/patjstevenson/">LinkedIn</a>
+        </div>
+      </div>
+    </section>
     <!-- End CONTACT-->
 
     <footer>
