added skills to about, removed borders on portfolio section

--- a/index.html
+++ b/index.html
@@ -28,15 +28,31 @@
         <img src="./images/profile.jpeg" />
       </div>
       <div class="aboutInfo">
-        <h1>Patrick Stevenson</h1>
-        <h2>Web Developer</h2>
-        <p>
-          I am a web developer based out of Southern California. Feel free to
-          contact me with questions regarding availability for future projects.
-        </p>
+        <div class="intro">
+          <h1>Patrick Stevenson</h1>
+          <h2>Web Development</h2>
+          <p>
+            I am a web developer based out of Southern California. Feel free to
+            contact me with questions regarding availability for future
+            projects.
+          </p>
+        </div>
+        <div class="skills">
+          <h3>Skills</h3>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Less</li>
+            <li>Responsive Design</li>
+          </ul>
+        </div>
       </div>
     </section>
     <!-- End ABOUT -->
+
+    <section id="workHistory">
+      <table></table>
+    </section>
 
     <section id="portfolio">
       <div>
