added media queries for phone

--- a/index.html
+++ b/index.html
@@ -66,8 +66,11 @@
               class="projectImage"
               alt="Webpage with responsive phone view"
             />
-            <h3>Responsive</h3>
-            <p></p>
+            
+              <a href="https://github.com/patjonstevenson/responsive-web-design-I">
+                Responsive Design I
+              </a>
+            <p>Project with responsive design using CSS media queries.</p>
           </div>
           <div class="project">
             <img
@@ -75,8 +78,8 @@
               class="projectImage"
               alt="Webpage with CSS styling"
             />
-            <h3>Sprint</h3>
-            <p></p>
+            <a href="">Sprint</a>
+            <p>Week 1 Sprint project from Lambda School. Incorporates CSS flexbox.</p>
           </div>
           <div class="project">
             <img
@@ -84,7 +87,7 @@
               class="projectImage"
               alt="Webpage with CSS styling"
             />
-            <h3>User Interface III</h3>
+            <a href="https://github.com/patjonstevenson/UI-III-Flexbox">User Interface III</a>
             <p>User Interface I project with CSS styling and flexbox.</p>
           </div>
           <div class="project">
@@ -93,8 +96,8 @@
               class="projectImage"
               alt="Barebones HTML page"
             />
-            <h3>User Interface I</h3>
-            <p>Barebones HTML project</p>
+            <a href="https://github.com/patjonstevenson/User-Interface">User Interface I</a>
+            <p>Barebones HTML project from Lambda School Week 1.</p>
           </div>
         </div>
       </section>
