--- a/index.html
+++ b/index.html
@@ -53,7 +53,34 @@
       <!-- End ABOUT -->
 
       <section id="workHistory">
-        <table></table>
+        <h2>Work History</h2>
+        <table style="width:100%">
+          <tr class="labels">
+            <th>Company</th>
+            <th>Position</th> 
+            <th>Years</th>
+          </tr>
+          <tr>
+            <td>Boething Treeland Farmsl</td>
+            <td>Field Laborer</td>
+            <td>2018-2019</td>
+          </tr>
+          <tr>
+            <td>Brentwood Marketing</td>
+            <td>Sales Associate</td>
+            <td>2017</td>
+          </tr>
+          <tr>
+            <td>Garlo's Aussie Pie Shop</td>
+            <td>Food Laborer</td>
+            <td>2015-2016</td>
+          </tr>
+          <tr>
+            <td>Scenario Digital Media</td>
+            <td>Marketing Manager</td>
+            <td>2013-2014</td>
+          </tr>
+        </table>
       </section>
 
       <section id="portfolio">
