corrected a spelling mistake, added .bordered() mixin

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <th>Years</th>
           </tr>
           <tr>
-            <td>Boething Treeland Farmsl</td>
+            <td>Boething Treeland Farms</td>
             <td>Field Laborer</td>
             <td>2018-2019</td>
           </tr>
