cleaned up contact section

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
         </div>
         <div class="contactInfo">
           <div class="form">
+            <h3>Email</h3>
             <form action="https://formspree.io/pat.jon.stevenson@gmail.com" method="POST" />
               Name: <br>
               <input type="text" name="name"><br>
@@ -148,6 +149,7 @@
             </form>
           </div>
           <div class="links">
+            <h3>Social</h3>
             <a href="https://www.github.com/patjonstevenson">GitHub</a><br><br><br>
             <a href="https://www.linkedin.com/in/patjstevenson/">LinkedIn</a><br>
           </div>
