added workHistoryMobile section, which is better for mobile

--- a/index.html
+++ b/index.html
@@ -83,6 +83,27 @@
         </table>
       </section>
 
+      <section id="workHistoryMobile">
+        <h2>Work History</h2>
+        <div class="job">
+          <h3>Boething Treeland Farms</h3>
+          <p>Field Laborer 2018-2019</p>
+        </div>
+        <div class="job">
+            <h3>Brentwood Marketing</h3>
+            <p>Sales Associate 2017</p>
+        </div>
+          <div class="job">
+            <h3>Garlo's Aussie Pie Shop</h3>
+            <p>Food Laborer 2015-2016</p>
+            </div>
+          <div class="job">
+            <h3>Scenario Digital Media</h3>
+            <p>Marketing Manager 2013-2014</p>
+            </div>
+      </section>
+
+
       <section id="portfolio">
         <div>
           <h2>Portfolio</h2>
