changed font family for h1, h2

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>My Resume</title>
     <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic&display=swap" rel="stylesheet"> 
-
+    <link href="https://fonts.googleapis.com/css?family=Libre+Caslon+Display&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/index.css" />
 
     <!--[if lt IE 9]>
@@ -45,7 +45,7 @@
               <li>HTML</li>
               <li>CSS</li>
               <li>Less</li>
-              <li>Responsive Design</li>
+              <li>Linux</li>
             </ul>
           </div>
         </div>
