--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta property="og:title" content="Patrick Stevenson" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://patrickjstevenson.com" />
+    <meta property="og:image" content="http://www.patrickjstevenson.com/images/profile.jpeg" />
+    <meta property="og:description" content="Personal website of Patrick Stevenson" />
 
-    <title>My Resume</title>
+    <title>Patrick Stevenson</title>
     <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Libre+Caslon+Display&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="./css/index.css" />
 
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -35,16 +40,18 @@
             
             <p>
               I am a web developer based out of Southern California. Feel free
-              to contact me with questions regarding availability for future
+	      to <a href="#contact">contact me</a> with questions regarding availability for future
               projects.
             </p>
           </div>
           <div class="skills">
             <h3>Skills</h3>
             <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>Less</li>
+              <li>JavaScript</li>
+	      <li>React</li>
+	      <li>Reactstrap</li>
+              <li>Python</li>
+              <li>HTML/CSS</li>
               <li>Linux</li>
             </ul>
           </div>
